<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingBottom="100dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEnroll"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_enroll"
            app:layout_constraintBottom_toTopOf="@id/buttonLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogout"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_logout"
            app:layout_constraintBottom_toTopOf="@id/buttonTotp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonEnroll" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTotp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_totp"
            app:layout_constraintBottom_toTopOf="@id/buttonQrCodeAuth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonQrCodeAuth"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_qr_code_auth"
            app:layout_constraintBottom_toTopOf="@id/buttonQrCodeOffline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonTotp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonQrCodeOffline"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_qr_code_offline_auth"
            app:layout_constraintBottom_toTopOf="@id/buttonScanQR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonQrCodeAuth" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonScanQR"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_qr_code_generic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/checkMigrationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonQrCodeOffline" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkMigrationButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_accounts_migration_check"
            app:layout_constraintBottom_toTopOf="@id/performMigrationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonScanQR" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/performMigrationButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_accounts_migration_execute"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkMigrationButton" />

        <androidx.cardview.widget.CardView
            android:id="@+id/migrationCard"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Migration Progress"/>

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Fetching fresh observations"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>